[Contextual Tasks] Fix voice icon and Lens icon overlapping
This CL fixes the icons overlapping due to the voice icon CSS not being
properly applied in side panel mode. Also fixes a bug where the Lens
icon fades in when opening directly to side panel mode.

(cherry picked from commit f2a8f11996e78ad5e37651857d0a039cb5202364)

Bug: 473220142
Fixed: b:472496818
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7361846
Commit-Queue: Duncan Mercer <mercerd@google.com>
Cr-Original-Commit-Position: refs/heads/main@{#1563461}
Bypass-Check-License: Merging existing code (with 2025 license) to release branch
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7386662
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Cr-Commit-Position: refs/branch-heads/7559@{#2894}
Cr-Branched-From: 223dfbac1c7542a06b422390d954afe5b560b607-refs/heads/main@{#1552494}

--- a/chrome/browser/resources/contextual_tasks/composebox.css
+++ b/chrome/browser/resources/contextual_tasks/composebox.css
@@ -277,6 +277,8 @@
   --cr-icon-button-fill-color: var(--color-composebox-voice-lens-button);
   --cr-icon-button-icon-size: var(--icon-menu-icon-size);
   --cr-icon-button-size: var(--icon-menu-button-size);
+  /* Override the expanding fade in animation to make the icon appear instantly. */
+  animation: none;
   bottom: var(--composebox-icon-menu-bottom);
   display: block;
   inset-inline-end: var(--composebox-last-icon-inline-end);
@@ -382,7 +384,7 @@
 }
 
 /* Lens is only shown in side panel, so adjust spacing. */
-#composebox[show-submit_][is-side-panel][submit-enabled_]::part(voice-icon) {
+:host([is-side-panel]) #composebox[show-submit_][submit-enabled_]::part(voice-icon) {
   inset-inline-end: calc(var(--composebox-submit-container-size)
       + var(--icon-menu-button-size)
       + 2 * var(--icon-menu-spacing)
@@ -401,7 +403,7 @@
 }
 
 /* Lens is only shown in side panel, so adjust spacing. */
-#composebox[is-side-panel]::part(voice-icon) {
+:host([is-side-panel]) #composebox::part(voice-icon) {
   inset-inline-end: calc(
       var(--icon-menu-button-size)
       + var(--icon-menu-spacing)
